--- a/classroom/Case study HTML/index.html
+++ b/classroom/Case study HTML/index.html
@@ -33,18 +33,17 @@ THIS IS A FICTIONAL CASE STUDY WEBSITE FOR TRAINING PURPOSES.
                 </div>
                 <!--NAV SECTION START-->
                 <div class="navC">
-                    
-                    <span class="navBtn">&#9776;</span>
-                    <nav>
-                        <ul id="mainMenu" class="menuItems">
-                            <li><a href="#home">HOME</a></li>
-                            <li><a href="#products">PRODUCTS</a></li>
-                            <li><a href="#sales">SALES</a></li>
-                            <li><a href="#about">ABOUT</a></li>
-                            <li><a href="#contact">CONTACT</a></li>
-                            <li class="viewCart"><a href="#view cart">VIEW CART</a></li>
-                        </ul>
-                    </nav>
+					<button onclick="navButton()" class="navBtn">&#9776;</button>
+					<nav>
+						<ul id="mainMenu" class="menuItems">
+							<li><a href="#home">HOME</a></li>
+							<li><a href="#products">PRODUCTS</a></li>
+							<li><a href="#sales">SALES</a></li>
+							<li><a href="#about">ABOUT</a></li>
+							<li><a href="#contact">CONTACT</a></li>
+							<li class="viewCart"><a href="#view cart">VIEW CART</a></li>
+						</ul>
+					</nav>
                 </div>
             </header>
                 <!--NAV SECTION END-->
